Refactor registry store creation with reusable utility methods
Simplified the creation of registry stores by introducing utility methods `storeClass` and `storeRef`, reducing code duplication and improving maintainability. Updated related DTOs and registry file methods for consistency.